Committing more spacing fixes and hopefully a db fi

--- a/app/assets/stylesheets/sky.css.scss
+++ b/app/assets/stylesheets/sky.css.scss
@@ -14,17 +14,17 @@ html,body {
 
 h1,h2,h3,h4,h5,h6 {
   padding: 0;
-  margin: 0 0 0.5em;
+  margin: 0 0 15px;
   vertical-align: baseline;
   font-weight: normal;
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 2em;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 1.5em;
 }
 
 h4 {
